--- a/.env.template
+++ b/.env.template
@@ -4,9 +4,16 @@ VITE_SUPABASE_ANON_KEY=your-anon-key
 
 # Stripe Configuration (Frontend)
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key
-VITE_STRIPE_PRO_PRICE_ID=price_your_pro_price_id
-VITE_STRIPE_PLUS_PRICE_ID=price_your_plus_price_id
-VITE_STRIPE_PREMIUM_PRICE_ID=price_your_premium_price_id
+
+# Monthly Price IDs
+VITE_STRIPE_PRO_MONTHLY_PRICE_ID=price_your_pro_monthly_price_id
+VITE_STRIPE_PLUS_MONTHLY_PRICE_ID=price_your_plus_monthly_price_id
+VITE_STRIPE_PREMIUM_MONTHLY_PRICE_ID=price_your_premium_monthly_price_id
+
+# Annual Price IDs
+VITE_STRIPE_PRO_ANNUAL_PRICE_ID=price_your_pro_annual_price_id
+VITE_STRIPE_PLUS_ANNUAL_PRICE_ID=price_your_plus_annual_price_id
+VITE_STRIPE_PREMIUM_ANNUAL_PRICE_ID=price_your_premium_annual_price_id
 
 # Stripe Configuration (Backend - for Edge Functions)
 # These should be set in Supabase Dashboard > Edge Functions > Secrets
