Beef up security

--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,10 @@
 VITE_SUPABASE_URL=https://your-project-ref.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
 
+# hCaptcha Configuration (for signup form)
+# Get your site key from https://dashboard.hcaptcha.com/
+VITE_HCAPTCHA_SITE_KEY=your-hcaptcha-site-key
+
 # Stripe Configuration (Frontend)
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key
 
