--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,46 @@
 [build.environment]
   NODE_VERSION = "18"
 
+# Security Headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    # Prevent clickjacking attacks
+    X-Frame-Options = "DENY"
+
+    # Prevent MIME type sniffing
+    X-Content-Type-Options = "nosniff"
+
+    # Enable XSS protection (legacy browsers)
+    X-XSS-Protection = "1; mode=block"
+
+    # Referrer policy - only send origin on cross-origin requests
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+    # Permissions policy - disable unnecessary browser features
+    Permissions-Policy = "camera=(), microphone=(), geolocation=(), interest-cohort=()"
+
+    # Content Security Policy - prevent XSS attacks
+    Content-Security-Policy = """
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://www.clarity.ms https://js.hcaptcha.com https://*.hcaptcha.com;
+      style-src 'self' 'unsafe-inline' https://*.hcaptcha.com;
+      img-src 'self' data: https: blob:;
+      font-src 'self' data:;
+      connect-src 'self' https://*.supabase.co https://api.stripe.com https://www.clarity.ms https://cronnarc.com https://*.hcaptcha.com;
+      frame-src https://js.stripe.com https://*.hcaptcha.com;
+      object-src 'none';
+      base-uri 'self';
+      form-action 'self';
+      frame-ancestors 'none';
+      upgrade-insecure-requests;
+    """
+
+    # Strict Transport Security - force HTTPS (2 years)
+    Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
+
+# Cache static assets
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
