--- a/netlify.toml
+++ b/netlify.toml
@@ -32,7 +32,7 @@
     # Content Security Policy - prevent XSS attacks
     Content-Security-Policy = """
       default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://www.clarity.ms https://js.hcaptcha.com https://*.hcaptcha.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://www.clarity.ms https://scripts.clarity.ms https://js.hcaptcha.com https://*.hcaptcha.com;
       style-src 'self' 'unsafe-inline' https://*.hcaptcha.com;
       img-src 'self' data: https: blob:;
       font-src 'self' data:;
