--- a/netlify.toml
+++ b/netlify.toml
@@ -36,7 +36,7 @@
       style-src 'self' 'unsafe-inline' https://*.hcaptcha.com;
       img-src 'self' data: https: blob:;
       font-src 'self' data:;
-      connect-src 'self' https://*.supabase.co https://api.stripe.com https://www.clarity.ms https://y.clarity.ms https://cronnarc.com https://*.hcaptcha.com;
+      connect-src 'self' https://*.supabase.co https://api.stripe.com https://www.clarity.ms https://y.clarity.ms https://cronnarc.com https://*.hcaptcha.com https://api.allorigins.win;
       frame-src https://js.stripe.com https://*.hcaptcha.com;
       object-src 'none';
       base-uri 'self';
